--- a/main.tex
+++ b/main.tex
@@ -112,7 +112,7 @@ pdfkeywords={system composability, submanifolds, foliations, system Identificati
 \begin{document}
 
 \begin{abstract}
-Parameter spaces foliated by observations. Local theory a la Isidori's textbook chapter 1, and Nijmeier Chapter 3. 
+A brief set of notes on nonlinear control. To be used as a base for building the theory of nonlinear controllability and observability for synthetic and systems biology. 
 
 
 
