--- a/refs.bib
+++ b/refs.bib
@@ -31,3 +31,22 @@
 	year = {2002},
 	bdsk-url-1 = {https://shop.elsevier.com/books/an-introduction-to-differentiable-manifolds-and-riemannian-geometry-revised/boothby/978-0-08-057475-2}}
 
+
+@book{abraham_manifolds_1988,
+	address = {New York, NY},
+	author = {Abraham, Ralph and Marsden, Jerrold E. and Ratiu, Tudor},
+	copyright = {http://www.springer.com/tdm},
+	doi = {10.1007/978-1-4612-1029-0},
+	file = {Full Text:/Users/vipulsinghal/Zotero/storage/N4Z2JMJD/Abraham et al. - 1988 - Manifolds, Tensor Analysis, and Applications.pdf:application/pdf},
+	isbn = {978-1-4612-6990-8 978-1-4612-1029-0},
+	keywords = {calculus, compactness, Derivative, Electromagnetism, exterior derivative, Hodge star operator, Implicit function, manifold, Riemannian geometry},
+	publisher = {Springer},
+	series = {Applied {Mathematical} {Sciences}},
+	title = {Manifolds, {Tensor} {Analysis}, and {Applications}},
+	url = {http://link.springer.com/10.1007/978-1-4612-1029-0},
+	urldate = {2024-08-20},
+	volume = {75},
+	year = {1988},
+	bdsk-url-1 = {http://link.springer.com/10.1007/978-1-4612-1029-0},
+	bdsk-url-2 = {https://doi.org/10.1007/978-1-4612-1029-0}}
+
