added vectors as operators, working on vector fields

--- a/main.tex
+++ b/main.tex
@@ -119,15 +119,15 @@ pdfkeywords={system composability, submanifolds, foliations, system Identificati
 \author{Vipul Singhal$^{1}$}
 \address{$^1$Genome Institute of Singapore, Agency for Science, Technology and Research, 60 Biopolis St., Singapore, Republic of Singapore}
 % \address{$^2$Integrated Biosciences, 900 Island Drive, Redwood City, CA 94065, United States}
-\email{vs@alumni.caltech.edu, vipuls@gis.a-star.edu.sg}
+\email{vipuls@gis.a-star.edu.sg}
 \begin{document}
 
 \begin{abstract}
 % {\color{red}Note: these notes should be more or less self contained. Do not expect the reader to look things up while reading. It's okay to expect them to know the general gist of differential geometry, and maybe even have studied it in the past. I.e., these notes serve as a very brief primer or a refresher, so that we can talk about nonlinear control ideas. This is not not a first course in diffgeo. Though it is also not a piece of swiss cheese. Make sure there aren't any major holes! (its okay to skip Hausdorff spaces/the difinition of topological manifolds, second countability, etc. )}
 
-A brief set of notes on nonlinear observability and identifiability, mostly for my own reference. We begin with a description of basic ideas from differential geometry (manifolds, Frobenius theorem, distributions and codistributions), and move on to describing the observability-identifiability codistribution. We end with a method for identifying state and parameter variables that are unobservable or non-identifiable. This geometric viewpoint can be used to describe uncertainty in models of gene expression in systems and synthetic biology, which we will explore in a subsequent work. 
+A brief set of notes on nonlinear observability and identifiability. We begin with a description of basic ideas from differential geometry (manifolds, Frobenius theorem, distributions and codistributions), and move on to describing the observability-identifiability codistribution. We end with a method for identifying state and parameter variables that are unobservable or non-identifiable. This geometric viewpoint can be used to describe uncertainty in models of gene expression in systems and synthetic biology, which we will explore in a subsequent work. 
 
-Later, I will describe the accessibility algebra and nonlinear controllability, and discuss the possibility of controlling the transcriptomic and proteomic state of cells by over and under expressing genes and manipulating signaling pathways. 
+Optionally (not sure yet) I will describe the accessibility algebra and nonlinear controllability. We can then unify everything into \textit{minimal realizations} of nonlinear control systems. %and discuss the possibility of controlling the transcriptomic and proteomic state of cells by over and under expressing genes and manipulating signaling pathways. 
 % \noindent \textbf{Keywords.} system composability, submanifolds, foliations, system identification, genetic circuits, machine learning, manifold learning
 % diffusion maps, polynomial ideals, parameter variety, graph laplacian
 \end{abstract}
