--- a/main.tex
+++ b/main.tex
@@ -117,8 +117,8 @@ pdfkeywords={system composability, submanifolds, foliations, system Identificati
 % \title{Notes on nonlinear observability, with applications in uncertainty quantification for systems biology models}
 \title{A primer on nonlinear observability and identifiability} % for perturbational control of transcriptional states
 \author{Vipul Singhal$^{1}$}
-% \address{$^1$Genome Institute of Singapore, Agency for Science, Technology and Research, 60 Biopolis St., Singapore, Republic of Singapore}
-\address{$^1$Integrated Biosciences, 900 Island Drive, Redwood City, CA 94065, United States}
+\address{$^1$Genome Institute of Singapore, Agency for Science, Technology and Research, 60 Biopolis St., Singapore, Republic of Singapore}
+% \address{$^1$Integrated Biosciences, 900 Island Drive, Redwood City, CA 94065, United States}
 \email{vipuls@gis.a-star.edu.sg}
 \begin{document}
 
